Bug 841132: Remove unused variable 'notes' from js::XDRScript(). r=njn,till